--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -54,6 +54,7 @@
 
     <!-- Brightness slider -->
     <string name="tuner_show_brightness_new">Show brightness slider</string>
+    <string name="tuner_show_brightness_slider_auto">Auto brightness</string>
     <string name="tuner_brightness_position_bottom">Brightness slider on bottom</string>
 
     <!-- Label for area where tiles can be added to the qs panel -->
