--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -22,10 +22,16 @@
         android:key="quick_settings"
         android:title="@string/quick_settings" >
 
-        <com.android.systemui.tuner.TunerSwitch
-            android:key="qs_show_brightness"
+        <com.statix.support.preferences.SecureSettingSwitchPreference
+            android:key="qs_show_brightness_slider"
             android:title="@string/tuner_show_brightness_new"
-            sysui:defValue="true" />
+            android:defaultValue="true" />
+
+        <com.statix.support.preferences.SecureSettingSwitchPreference
+            android:key="qs_show_auto_brightness"
+            android:title="@string/tuner_show_brightness_slider_auto"
+            android:dependency="qs_show_brightness_slider"
+            android:defaultValue="true" />
 
         <com.android.systemui.tuner.TunerSwitch
             android:key="qs_brightness_position_bottom"
