--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -56,6 +56,9 @@
     <string name="tuner_show_brightness_new">Show brightness slider</string>
     <string name="tuner_show_brightness_slider_auto">Auto brightness</string>
     <string name="tuner_brightness_position_bottom">Brightness slider on bottom</string>
+    <string name="tuner_brightness_slider_show_never">Never show</string>
+    <string name="tuner_brightness_slider_show_expanded">Show when expanded</string>
+    <string name="tuner_brightness_slider_show_always">Show always</string>
 
     <!-- Label for area where tiles can be added to the qs panel -->
     <string name="drag_or_tap_to_add_tiles">Hold &amp; drag or tap to add tiles</string>
