base: Optionally tint QS Tile with accent color
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Change-Id: I9e702bfb1534f89ecfb706568567cfb5d3fb3ec1

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -68,4 +68,7 @@
 
     <!-- Ambient Music Ticker -->
     <string name="ambientmusic_songinfo" formatted="false">%s by %s</string>
+
+    <!-- QS tiles tinting -->
+    <string name="qs_bg_use_new_tint">Tint QS tiles</string>
 </resources>
