--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -77,6 +77,12 @@
             android:key="footer_text_show"
             android:title="@string/footer_text_show_title"
             android:defaultValue="false" />
+
+        <com.statix.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_panel_bg_use_new_tint"
+            android:title="@string/qs_bg_use_new_tint"
+            android:defaultValue="false" />
+
     </PreferenceScreen>
 
     <PreferenceScreen
